--- a/02-nest-rn/package.json
+++ b/02-nest-rn/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@nestjs/common": "10.3.10",
+    "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.3.10",
+    "@nestjs/mapped-types": "2.0.5",
     "@nestjs/mongoose": "10.0.10",
     "@nestjs/platform-express": "10.3.10",
     "mongoose": "8.5.1",
